hphp/test/zend/good/ext/mysqli/tests/mysqli_character_set.php.skipif
<?php
require_once('skipif.inc');
require_once('skipifconnectfailure.inc');
require_once('skipifunicode.inc');
require_once('skipifemb.inc');

if (!function_exists('mysqli_set_charset')) {
	die('skip mysqli_set_charset() not available');
}
if (version_compare(PHP_VERSION, '5.9.9', '>') == 1) {
	die('skip set character set not functional with PHP 6 (fomerly PHP 6 && unicode.semantics=On)');
}
?>