hphp/test/zend/bad/ext/mysqli/tests/mysqli_get_connection_stats_off.php.skipif
<?PHP
require_once('skipif.inc');
require_once('skipifemb.inc');
require_once('skipifconnectfailure.inc');
if (!function_exists('mysqli_get_connection_stats')) {
	die("skip only available with mysqlnd");
}
?>